Added margin to admin button (Fixes #3)
Signed-off-by: jenewland1999 <34895363+jenewland1999@users.noreply.github.com>

--- a/public/public/stylesheets/ibuy.css
+++ b/public/public/stylesheets/ibuy.css
@@ -102,6 +102,10 @@
 .ibuy__nav-item {
 }
 
+.ibuy__navbar--general .ibuy__nav-item.ibuy__nav-dropdown {
+  margin-right: 1rem;
+}
+
 .ibuy__nav-link,
 .ibuy__nav-link:link,
 .ibuy__nav-link:visited {
