Improved various pages surrounding auctions
- The auction approve, disapprove, deletion (admin) and deletion (user) templates have been overhauled to have a more consistent mark-up and look. (Addresses #8, #9 and #13)
- Created a css class called .ibuy_text to use on elements that print text to the screen that originated from user input (Addresses #9 and #13)

Signed-off-by: jenewland1999 <34895363+jenewland1999@users.noreply.github.com>

--- a/public/public/stylesheets/ibuy.css
+++ b/public/public/stylesheets/ibuy.css
@@ -283,3 +283,13 @@ a.ibuy__btn-social-media {
 .ibuy__btn-social-media .svg-inline--fa.fa-w-10 {
   width: 1rem;
 }
+
+/* 
+  Ensures text sourced from user input 
+  plays nicely when printed to the document.
+*/
+.ibuy__text {
+  white-space: pre-wrap;
+  word-break: break-word;
+  word-wrap: break-word;
+}
